# doot-doot-wow

./: .env.template  .gitignore  Dockerfile  DootRestart.sh  Makefile  README.md  claude.md  config.example.json  docker-compose.yaml  example_config.json  init-app.sh  main.py  redis.conf  requirements.txt
app/: .dockerignore  Dockerfile  config.example.json  config.example.yaml  init-app.sh  main.py  pyproject.toml  requirements.txt
app/cogs/: Admin.py  Entrance.py  Help.py  Media.py  ModTools.py  Player.py  SoundsUtils.py  Stats.py
app/db/: metadata.sql  sounds.sql
app/modules/: __init__.py  aliases.py  app_config.py  database.py  entrance.py  errors.py  helper_functions.py  imgprocessing.py  player.py  quicksounds.py  redis_to_static.py  redisworkers.py
app/tests/: conftest.py  test_aliases.py  test_helper_functions.py  test_player_cog.py  test_player_module.py
app/utils/: Logger.py
backend/: .env.template  .gitignore  build.gradle  dockerfile
backend/src/main/resources/: application-dev.properties  application.properties  application.properties.template
cogs/: Admin.py  Basics.py  Entrance.py  Help.py  Media.py  ModTools.py  Player.py  Quicksounds.py  SoundsUtils.py  Stats.py
database/: dockerfile  init-app.sh
db/: sounds.sql
modules/: __init__.py  aliases.py  app_config.py  command_help.py  errors.py  helper_functions.py  imgprocessing.py  media.py  menus.py  metadata.py  modtools.py  player.py  quicksounds.py  redisworkers.py
redis/: Dockerfile  init-app.sh  redis.conf.template
utils/: Logger.py
(+10 files in other folders)
